
===========================================================================
MARK: released gwenhywfar-1.2.1 (2004/10/02)
===========================================================================


2004/09/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db: GWEN_GetIntValue: When converting a char value to int we now use
  "%i" instead of "%d". This will allow the code to read hex values as well


===========================================================================
MARK: released gwenhywfar-1.2 (2004/09/26)
===========================================================================


2004-09-25  Christian Stimming  <stimming@tuhh.de>

	* src/parser/text.c, src/os/posix/libloader.c: When changing the
	locale, immediately copy the previous locale to a new
	buffer. Otherwise often enough the returned string which was
	static storage was no longer valid.


2004/09/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db: ReadFromStream now uses a GWEN_BUFFER instead of a fixed char buffer.
  This removes unnecessary limits (and allows libchipcard to work)


2004-09-24   Christian Stimming <stimming@tuhh.de>

	* gwenpp/Makefile.am, tools/*/Makefile.am: Fix LIBADD flags so
	that all libraries and tools are forced to link against the
	currently compiled libgwen instead of the potentially installed
	one. Necessary for e.g. building new rpms.


2004/09/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- xml: added flag GWEN_XML_FLAGS_IGNORE_DESCR. This flag makes the XML code
  ignore <DESCR> tags when reading a file.
- args: fixed a silly bug (flags are binary, and flag help falsely contained
  two other flags). Normally this change would mean to break conmpatibility.
  However, since I'm the only one currently using GWEN_ARGS I will still
  increment SO_AGE for the next release.


2004/09/23: Martin Preuss<martin@libchipcard.de>