@@ -1,4 +1,9 @@
 
+2004/11/02: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- src/os/directory_all.c: Improved path handling for WIN32
+
+
 ===========================================================================
 MARK: released gwenhywfar-1.2.1 (2004/10/02)
 ===========================================================================
